--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -35,6 +35,7 @@ v0.41.4-dev (SVN)
 + Bug: Minimap would still draw unit icons for sensor returns
 + Bug [#4527]: Infantry leg attacks hit non-leg locations
 + Bug: NPE in Entity.canGoUp and canGoDown for Princess movement planning
++ Bug: Potential NPE in GameListener.gameTurnChange
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
 + Data: New Sprites
