+ Added missing i18n entries   I don't think these ever get displayed anywhere, but I was tired of the   warnings in the logfile.

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -1268,6 +1268,8 @@ MovementDisplay.MoveLaunch=Launch
 MovementDisplay.moveLayMine=Lay Mine
 MovementDisplay.moveLoad=Load
 MovementDisplay.MoveLand=Land
+MovementDisplay.MoveLongestRun=Longest Run
+MovementDisplay.MoveLongestWalk=Longest Walk
 MovementDisplay.MoveJoin=Join
 MovementDisplay.moveLongestRun=Long Run
 MovementDisplay.moveLongestWalk=Long Walk
