--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -36,6 +36,8 @@ v0.41.4-dev (SVN)
 + Bug [#4527]: Infantry leg attacks hit non-leg locations
 + Bug: NPE in Entity.canGoUp and canGoDown for Princess movement planning
 + Bug: Potential NPE in GameListener.gameTurnChange
++ Bug: Potential for NPEs during deployment if "no entities to move" is msg is
+    received
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
 + Data: New Sprites
