--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -38,6 +38,7 @@ v0.41.4-dev (SVN)
 + Bug: Potential NPE in GameListener.gameTurnChange
 + Bug: Potential for NPEs during deployment if "no entities to move" is msg is
     received
++ Bug: ReplacePlayer Dialog creates additional superfluous bot clients
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
 + Data: New Sprites
