--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -39,6 +39,7 @@ v0.41.4-dev (SVN)
 + Bug: Potential for NPEs during deployment if "no entities to move" is msg is
     received
 + Bug: ReplacePlayer Dialog creates additional superfluous bot clients
++ Bug [#4400]: Game Frozen when Kicking Princess
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
 + Data: New Sprites
