--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -42,6 +42,8 @@ v0.41.4-dev (SVN)
 + Bug [#4400]: Game Frozen when Kicking Princess
 + Bug [#4529]: Princess gets stuck with assault dropped units
 + Bug [#4530]: Stable quirk PSR mod applied more than once when...
++ Princess now considers airborne aeros on ground maps to have a max weapon
+    range of 0, to account for flight paths
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
 + Data: New Sprites
