--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -45,6 +45,7 @@ v0.41.4-dev (SVN)
 + Princess now considers airborne aeros on ground maps to have a max weapon
     range of 0, to account for flight paths
 + Bug [#4434]: Princess Small Craft not Moving on Ground Map
++ Bug [#4428]: Princess Aero not Moving on Ground Battle
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
 + Data: New Sprites
