--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -46,6 +46,7 @@ v0.41.4-dev (SVN)
     range of 0, to account for flight paths
 + Bug [#4434]: Princess Small Craft not Moving on Ground Map
 + Bug [#4428]: Princess Aero not Moving on Ground Battle
++ Bug [#4451]: ASF free facing changes incorrect on ground maps
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
 + Data: New Sprites
