--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -47,6 +47,7 @@ v0.41.4-dev (SVN)
 + Bug [#4434]: Princess Small Craft not Moving on Ground Map
 + Bug [#4428]: Princess Aero not Moving on Ground Battle
 + Bug [#4451]: ASF free facing changes incorrect on ground maps
++ Bug: Potential NPE applying Protomech critical hits
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
 + Data: New Sprites
