+ Feature: Player list width in ChatterBox now resizable

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -53,6 +53,7 @@ v0.41.4-dev (SVN)
 + Patches [#399]: Stefan Amaris battleship arc fix
 + Patches [#400]: 3067Uu Clan Omnis need Omni flag set
 + Patches [#401]: Vehicle Stealth cleanup
++ Feature: Player list width in ChatterBox now resizable
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
 + Data: New Sprites
