--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -55,6 +55,8 @@ v0.41.4-dev (SVN)
 + Patches [#401]: Vehicle Stealth cleanup
 + Feature: Player list width in ChatterBox now resizable
 + Bug [#4354]: Princess bot refusing to eject immobilized tanks
++ Bug: "Damage this phase" from ammo explosions accounts for reduction by
+    standard CASE but not CASE II.
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
 + Data: New Sprites
