--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -58,6 +58,7 @@ v0.41.4-dev (SVN)
 + Bug: "Damage this phase" from ammo explosions accounts for reduction by
     standard CASE but not CASE II.
 + Bug [#4180]: Client Crash Associated with Fighter Squadrons
++ Bug [#4403]: Cannot Use ReplacePlayer GUI with Strategic Targets
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
 + Data: New Sprites
