+ Bug [#4479]: Poor reporting of when TerrainFactor is damaged

--- a/megamek/i18n/megamek/common/report-messages.properties
+++ b/megamek/i18n/megamek/common/report-messages.properties
@@ -314,6 +314,8 @@
 3372=<data> is hit by incendiary grenades!
 3375=<data> damage per trooper already resolved with previous attack.
 3380=<newline>But infantry cannot try to clear hexes!
+3383=Terrain burns for <data> damage.
+3384=Hex <data>: terrain takes <data> damage.
 3385=Terrain takes <data> damage.
 3390=<font color='008000'><B>hits</B></font>.
 3395=However, <data> (<data>) has fire protection gear so no damage is done.
