--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -59,6 +59,7 @@ v0.41.4-dev (SVN)
     standard CASE but not CASE II.
 + Bug [#4180]: Client Crash Associated with Fighter Squadrons
 + Bug [#4403]: Cannot Use ReplacePlayer GUI with Strategic Targets
++ Bug [#4479]: Poor reporting of when TerrainFactor is damaged
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
 + Data: New Sprites
