--- a/megamek/i18n/megamek/common/report-messages.properties
+++ b/megamek/i18n/megamek/common/report-messages.properties
@@ -839,6 +839,7 @@
 7073=Destroyed by pilot error.
 7074=Pilot ejected.
 7075=The following units never entered the field of battle:
+7076=All fighters in squadron destroyed 
 7080=<newline>The following units are in retreat:
 7085=<newline>Graveyard contains:
 7090=<newline>The following utterly destroyed units are not available for salvage:
