--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -65,6 +65,7 @@ v0.41.4-dev (SVN)
 + Bug [#4511]: Kill count and squadrons - no kills recorded
 + Bug [#4512]: Disconnecting players in the lounge no reset Done state
 + Bug [#4514]: Updates for protomech frenzy errata
++ Bug: Math off for overlapping Thunder-Augmented hexes.
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
 + Data: New Sprites
