--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -69,6 +69,7 @@ v0.41.4-dev (SVN)
 + Bug [#4537]: Firing more LRMs than you have swarm ammo still does swarm
     attacks 
 + Bug: Battle armor with mechanical jump boosters has negative C-bill cost.
++ Patch [#478]: Enhancements to Board Tooltips
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
 + Data: New Sprites
