--- a/trunk/megamek/i18n/megamek/client/messages.properties
+++ b/trunk/megamek/i18n/megamek/client/messages.properties
@@ -70,8 +70,6 @@ BoardSelectionDialog.UpdateSize=Update Size
 BoardSelectionDialog.Updating=Updating...
 BoardSelectionDialog.ViewGameBoard=View Game Board*
 BoardSelectionDialog.ViewGameBoardTooltip=<html>Shows a preview of the selected map.<br>  *Note: for generated maps the preview is only a sample<br> and will not be the same as the actual map used.</html>
-BoardView1.advs=\ advs>
-BoardView1.md =\ <Manei Domini>
 BoardView1.Active=Active (
 BoardView1.Armor=Armor 
 BoardView1.Artillery=Artillery
@@ -82,10 +80,6 @@ BoardView1.Attacker=Attacker({0}) hex is {1}.\n
 BoardView1.AttackerPartialCover=Attacker has {0} partial cover.\n
 BoardView1.ChooseEntityDialog.message=Hex {0} contains the following units.\n\nWhich unit do you want to select?"
 BoardView1.ChooseEntityDialog.title=Choose Unit
-BoardView1.CF=, CF: 
-BoardView1.BldgArmor=, Armor: 
-BoardView1.BldgBasement=, Basement: 
-BoardView1.BldgBasementCollapsed=\ (collapsed)
 BoardView1.Climb=Climb Up
 BoardView1.ClimbOff=Go Thru
 BoardView1.WIGEClimb=Keep Elev
@@ -143,7 +137,6 @@ BoardView1.LOSTitle=Range / Line of Sight
 BoardView1.Mech=Mech
 BoardView1.minefield=minefield
 BoardView1.move=Move 
-BoardView1.TAKINGCOVER=COVER
 BoardView1.TurretLocked=Turret\ Locked
 BoardView1.WeaponsDestroyed=Weapons\ Destroyed
 BoardView1.Operational=Operational
@@ -189,6 +182,39 @@ BoardView1.RANDOM=RANDOM
 BoardView1.EVADE=EVADE
 BoardView1.ROLLED=ROLLED
 BoardView1.sensorReturn=Sensor Return
+
+BoardView1.Tooltip.Unit=<B><FONT COLOR=#{0}>{1} ({2})</FONT></B>
+BoardView1.Tooltip.Pilot={0}: {1}/{2}
+BoardView1.Tooltip.PilotStatus=<FONT COLOR=#FF0000> ({0})</FONT>
+BoardView1.Tooltip.Advs=<BR><FONT SIZE=-2 COLOR=#555555>&nbsp;&nbsp;{0} Advs.;</FONT>
+BoardView1.Tooltip.Adv1=<BR><FONT SIZE=-2 COLOR=#555555>&nbsp;&nbsp;1 Adv.;</FONT>
+BoardView1.Tooltip.MD=<FONT SIZE=-2 COLOR=#555555>&nbsp;&nbsp;Manei Domini</FONT>
+BoardView1.Tooltip.Movement=Movement: {0}/{1}
+BoardView1.Tooltip.Evade=<BR><I><FONT COLOR=RED>(Evading)</FONT></I>
+BoardView1.Tooltip.TakingCover=<BR><I><FONT COLOR=RED>(Taking Cover)</FONT></I>
+BoardView1.Tooltip.Charging=<BR><I><FONT COLOR=RED>(Charging)</FONT></I>
+BoardView1.Tooltip.DFA=<BR><I><FONT COLOR=RED>(Death from Above)</FONT></I>
+BoardView1.Tooltip.AeroVelocity=<I><FONT COLOR=#400040>Current Velocity: {0}</FONT></I>
+BoardView1.Tooltip.Heat0=<FONT COLOR=#008000><I>Heat: 0</I></FONT>
+BoardView1.Tooltip.Heat=<FONT COLOR=#FF0000><I>Heat: {0}</I></FONT>
+BoardView1.Tooltip.Clan=C-
+BoardView1.Tooltip.NotYetMoved=<FONT COLOR=#400040><I>Has not yet moved</I></FONT>
+BoardView1.Tooltip.NoMove=<FONT COLOR=#400040><I>Did not move (Mod: 0)</I></FONT>
+BoardView1.Tooltip.Arrow=<FONT COLOR=#{0}>&#10145; </FONT>
+BoardView1.Tooltip.MovementF=<FONT COLOR=#400040><I>{0} {1} (Mod: {2})</I></FONT>
+BoardView1.Tooltip.Weapon=&nbsp;{1}{2}
+BoardView1.Tooltip.WeaponN=&nbsp;<B>{0} x</B>  {1}{2}
+BoardView1.Tooltip.TurretLocked=<I><FONT COLOR=RED>Turret locked!</FONT><I>
+BoardView1.Tooltip.Immobile=<I><FONT COLOR=RED>Immobile</FONT><I>
+BoardView1.Tooltip.ArtilleryAttack1=Artillery: {0} in 1 turn<BR><FONT SIZE=-2>&nbsp;&nbsp;Ammo: {1}</FONT>
+BoardView1.Tooltip.ArtilleryAttackN=Artillery: {0} in {2} turns<BR><FONT SIZE=-2>&nbsp;&nbsp;Ammo: {1}</FONT>
+
+BoardView1.Tooltip.Hex=Hex: {0} - Level: {1}
+BoardView1.Tooltip.Building={1} <BR>Height: {0}, CF: {2}<BR>Armor: {3}; Basement: {4}
+BoardView1.Tooltip.BldgBasementCollapsed=<BR><I><FONT COLOR=RED>(collapsed)</FONT><I>
+BoardView1.Tooltip.Bridge={1} <BR>Height: {0}, CF: {2}
+
+
 
 BombPayloadDialog.FighterBombDesc=Select the number and type of bombs you wish to drop.
 BombPayloadDialog.SquadronBombDesc=<html>Select the number of salvos for each bomb type you wish to drop.<br> The number in parenthesis represents the number of bombs that will be dropped.</html>
@@ -580,6 +606,7 @@ CommonSettingsDialog.tooltipDelay=Tooltip popup delay:
 CommonSettingsDialog.tooltipDismissDelay=Tooltip dismiss delay:
 CommonSettingsDialog.tooltipDismissDelayTooltip:Sets the delay before a tooltip is dismised.  -1 uses the default for your look and feel.
 CommonSettingsDialog.Update=Update
+CommonSettingsDialog.showWpsinTT=Show unit weapons in the tooltip
 ConfirmDialog.dontBother=Do not bother me again
 
 CustomBattleArmorDialog.title=Build your Battle Armor...
