--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -49,10 +49,10 @@ v0.41.4-dev (SVN)
 + Bug [#4451]: ASF free facing changes incorrect on ground maps
 + Bug: Potential NPE applying Protomech critical hits
 + Data: New Sprites/RAT fixes
-+ Patches [#479]: V. Stealth, Reflec, Reactive armor for Aeros
-+ Patches [#399]: Stefan Amaris battleship arc fix
-+ Patches [#400]: 3067Uu Clan Omnis need Omni flag set
-+ Patches [#401]: Vehicle Stealth cleanup
++ Patch [#479]: V. Stealth, Reflec, Reactive armor for Aeros
++ Patch [#399]: Stefan Amaris battleship arc fix
++ Patch [#400]: 3067Uu Clan Omnis need Omni flag set
++ Patch [#401]: Vehicle Stealth cleanup
 + Feature: Player list width in ChatterBox now resizable
 + Bug [#4354]: Princess bot refusing to eject immobilized tanks
 + Bug: "Damage this phase" from ammo explosions accounts for reduction by
@@ -70,6 +70,11 @@ v0.41.4-dev (SVN)
     attacks 
 + Bug: Battle armor with mechanical jump boosters has negative C-bill cost.
 + Patch [#478]: Enhancements to Board Tooltips
++ Patch [#402]: V. Stealth Cleanup Pt. 2
++ Patch [#403]: Drake Strike Fighter (XTR Boondocks)
++ Patch [#404]: Tiamat variants appear as aerodyne
++ Data: New Sprites,Unit Fixes,and New Map
+
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
 + Data: New Sprites
