--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -76,6 +76,7 @@ v0.41.4-dev (SVN)
 + Data: New Sprites,Unit Fixes,and New Map
 + Bug: If pressing a repeating key (like scrolling) when Done is clicked, scroll
     command gets stuck repeating
++ Bug: Opening board editor before playing a game could break key binds
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
