--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -77,6 +77,7 @@ v0.41.4-dev (SVN)
 + Bug: If pressing a repeating key (like scrolling) when Done is clicked, scroll
     command gets stuck repeating
 + Bug: Opening board editor before playing a game could break key binds
++ Princess now evaluates (and executes) kicks.
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
