+ Feature [#1385]: AToW Companion Weapons (also included Vees) + Feature [#1382]: Single-Tube Increments for Streak LRMs + Feature [#1383]: Add Infantry Equipment from HB:Kurita + Data: Unit Fixes

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -80,6 +80,10 @@ v0.41.4-dev (SVN)
 + Princess now evaluates (and executes) kicks.
 + Bug: HVAC explosions do no actual damage.
 + Patch [#481]: Show deployment zones when designating arty autohit
++ Feature [#1385]: AToW Companion Weapons (also included Vees)
++ Feature [#1382]: Single-Tube Increments for Streak LRMs
++ Feature [#1383]: Add Infantry Equipment from HB:Kurita
++ Data: Unit Fixes
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
