--- a/megamek/i18n/megamek/common/report-messages.properties
+++ b/megamek/i18n/megamek/common/report-messages.properties
@@ -1030,3 +1030,5 @@
 9921=needs <data> [<data>], rolls <data>: 
 9922=<font color='008000'><B>succeeds</B></font>.
 9923=<font color='C00000'><B>fails</B></font>!
+
+9940=<data> deals <data> damage to every target in the hex!
