+ Started updating FiringDisplay to select Hex: Clear targets when hexes are clicked for certain weapon/ammo combos (ie, certain mek mortars only target hexes, so they should target Hex: Clear regardless of a hex's occupants)

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -85,6 +85,9 @@ v0.41.4-dev (SVN)
 + Feature [#1383]: Add Infantry Equipment from HB:Kurita
 + Data: Unit Fixes
 + Feature [#1261]: Alternative ammunition types for Mech Mortars
++ Started updating FiringDisplay to select Hex: Clear targets when hexes are
+    clicked for certain weapon/ammo combos (ie, certain mek mortars only target
+    hexes, so they should target Hex: Clear regardless of a hex's occupants)
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
