+ Fixed some ammo type flag entries that were wrong     Some numbers were bit shifting 11 (one one) instead of 1l (one el), meaning     that the flag value wasn't what was expected.  I think this probably has     no real impact, but should be fixed for the sake of sanity.

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -88,6 +88,7 @@ v0.41.4-dev (SVN)
 + Started updating FiringDisplay to select Hex: Clear targets when hexes are
     clicked for certain weapon/ammo combos (ie, certain mek mortars only target
     hexes, so they should target Hex: Clear regardless of a hex's occupants)
++ Fixed some ammo type flag entries that were wrong
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
