--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -88,6 +88,7 @@ v0.41.4-dev (SVN)
 + Started updating FiringDisplay to select Hex: Clear targets when hexes are
     clicked for certain weapon/ammo combos (ie, certain mek mortars only target
     hexes, so they should target Hex: Clear regardless of a hex's occupants)
++ Fixed some ammo type flag entries that were wrong
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
