--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -91,6 +91,7 @@ v0.41.4-dev (SVN)
 + Fixed some ammo type flag entries that were wrong
 + Bug [#4446]: Aerospace squadrons can't change altitude in atmosphere
 + Bug [#4423]: disallow jump, VTOL and WiGE movement when omni-carrying BA
++ Bug [#4496]: Right-click Alpha strike weapon selection is sub-optimal
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
