+ Bug [#4593]: Revision 11839 (no jumping et al. carrying battle armor) inadvertantly broke the movement modes altogether.

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -92,6 +92,8 @@ v0.41.4-dev (SVN)
 + Bug [#4446]: Aerospace squadrons can't change altitude in atmosphere
 + Bug [#4423]: disallow jump, VTOL and WiGE movement when omni-carrying BA
 + Bug [#4496]: Right-click Alpha strike weapon selection is sub-optimal
++ Bug [#4593]: Revision 11839 (no jumping et al. carrying battle armor)
+    inadvertantly broke the movement modes altogether.
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
