--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -97,6 +97,7 @@ v0.41.4-dev (SVN)
 + Bug [#4540]: WiGEs cannot lift off and move in the same turn
 + Patch [#482]: Acid (AX) SRM ammo should damage IS
 + Bug: Fluff Image heuristics for units with "/" always fail
++ Bug [#4542]: Dropship Cargo Shown Twice
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
