+ Bug: WiGEs with fewer than 5 MP still able to lift off (pretty sure minimum movement doesn't cover _this_).

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -98,6 +98,8 @@ v0.41.4-dev (SVN)
 + Patch [#482]: Acid (AX) SRM ammo should damage IS
 + Bug: Fluff Image heuristics for units with "/" always fail
 + Bug [#4542]: Dropship Cargo Shown Twice
++ Bug: WiGEs with fewer than 5 MP still able to lift off (pretty sure minimum
+    movement doesn't cover _this_).
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
