--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -101,6 +101,7 @@ v0.41.4-dev (SVN)
 + Bug: WiGEs with fewer than 5 MP still able to lift off (pretty sure minimum
     movement doesn't cover _this_).
 + Patch [#483]: Artillery icons not scaling
++ Patch [#481]: Hotkey for deploy zone highlighting in arty auto hit phase
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
