--- a/trunk/megamek/i18n/megamek/client/messages.properties
+++ b/trunk/megamek/i18n/megamek/client/messages.properties
@@ -214,6 +214,8 @@ BoardView1.Tooltip.Building={1} <BR>Height: {0}, CF: {2}<BR>Armor: {3}; Basement
 BoardView1.Tooltip.BldgBasementCollapsed=<BR><I><FONT COLOR=RED>(collapsed)</FONT><I>
 BoardView1.Tooltip.Bridge={1} <BR>Height: {0}, CF: {2}
 
+BoardView1.Tooltip.ArtyAutoHint=<FONT SIZE=-2><I>You can show all players&#39;<BR>deployment zones on the board<BR>by pressing {0}.</I></FONT>
+BoardView1.Tooltip.ArtyAutoHeader=Deployment Hex for Players:<BR>
 
 
 BombPayloadDialog.FighterBombDesc=Select the number and type of bombs you wish to drop.
@@ -956,6 +958,8 @@ KeyBinds.cmdNames.centerOnSelected=Center on Selected
 KeyBinds.cmdDesc.centerOnSelected=Centers the board view on the currently selected unit
 KeyBinds.cmdNames.movementEnvelope=Movement Envelope
 KeyBinds.cmdDesc.movementEnvelope=Computes all of the possible moves for the currently selected unit
+KeyBinds.cmdNames.autoArtyDeployZone=Deployment Zones
+KeyBinds.cmdDesc.autoArtyDeployZone=Show all players' deployment zones during auto artillery target designation
 
 LOSDialog.inFirstHex=In first hex:
 LOSDialog.InSecondHex=In second hex:
