+ Bug: CursorSprites were being drawn off the board in the far upper left. Mostly, you could see a red highlighted hex when zoomed out
  This was caused by CursorSprites being drawn when their hex location was
  (-1, -1).  Sprite has a hidden state. I changed this to have getters/setters
  and then I overrode CursorSprites.isHidden to also check if the sprite is
  off screen, and if so consider it hidden.

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -108,6 +108,8 @@ v0.41.4-dev (SVN)
 + Data: New Sprites.
 + Patch [#484]: Allow tab key to be bound to a command
 + Patch [#484]: Dashed lines for MovementEnvelope and HexSprite clean-up
++ Bug: CursorSprites were being drawn off the board in the far upper left.
+    Mostly, you could see a red highlighted hex when zoomed out
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
