+ Bug: Empty tooltip displayed near board edge
  It's possible to get a tooltip near the board edge that is empty, and so just
  a little blue box is displayed.  If the getToolTip method returns null, the
  tooltip isn't displayed (which is different from a tooltip with an empty
  message).  I just added a check at the end of BoardView1.getToolTip that
  checks to see if the tooltip message is empty, and if so it returns null.

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -110,6 +110,7 @@ v0.41.4-dev (SVN)
 + Patch [#484]: Dashed lines for MovementEnvelope and HexSprite clean-up
 + Bug: CursorSprites were being drawn off the board in the far upper left.
     Mostly, you could see a red highlighted hex when zoomed out
++ Bug: Empty tooltip displayed near board edge
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
