+ Added an i18n entry to remove a warning
  Despite the entry being requested, I don't think it's ever actually displayed.

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -781,6 +781,7 @@ DeploymentDisplay.alertDialog1.message={0} can not load any of the remaining uni
 DeploymentDisplay.alertDialog1.title=Load Unit
 DeploymentDisplay.alertDialog2.message={0} is not transporting any units.
 DeploymentDisplay.alertDialog2.title=Unload Unit
+DeploymentDisplay.AssaultDrop=Assault Drop
 DeploymentDisplay.assaultDrop=Assault Drop
 DeploymentDisplay.assaultDropOff=Standard deploy
 DeploymentDisplay.buttonActive=Active({0})
