--- a/megamek/i18n/megamek/common/report-messages.properties
+++ b/megamek/i18n/megamek/common/report-messages.properties
@@ -666,6 +666,7 @@
 6086=<data> Armor remaining (damaged).
 6087=\ Reflective armor takes double damage from area effect attack: <data> damage.
 6088=\ Ballistic-reinforced armor takes reduced damage: <data> damage.
+6089=\ Impact-resistant armor takes reduced damage from physical damage: <data> damage.
 6090=Armor destroyed,
 6095=<data> men alive
 6100=\ <font color='0000FF'><data> Internal Structure remaining</font>
@@ -733,6 +734,7 @@
 6340=Location has no more hittable critical slots.
 6342=Functional HarJel system protects against breaching.
 6343=Functional HarJel II/III system provides a +2 bonus to breach check.
+6344=Impact-resistant armor provides a -1 penalty to breach check.
 6345=Possible breach on <data>. Roll is <data>:<msg:6346,6347>
 6346=\ no breach.\n
 6347=\ <font color='C00000'>Breach!</font>
