--- a/megamek/i18n/megamek/common/equipmentmessages.properties
+++ b/megamek/i18n/megamek/common/equipmentmessages.properties
@@ -16,6 +16,11 @@ EquipmentMode.Armed=Armed
 EquipmentMode.Normal=Normal
 EquipmentMode.Aimed\ shot=Aimed shot
 
+EquipmentMode.Bracket\ 80%=Bracket 80%
+EquipmentMode.Bracket\ 60%=Bracket 60%
+EquipmentMode.Bracket\ 40%=Bracket 40%
+EquipmentMode.AAA=AAA
+
 EquipmentType.Flamer=Flamer
 EquipmentType.Vehicle\ Flamer=Vehicle Flamer
 EquipmentType.Small\ Laser=Small Laser
