+ Patches [#405/#406/#407/#408/#409] - Various Source Updates. + New Sprites

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -130,6 +130,8 @@ v0.41.4-dev (SVN)
 + Bug [#4450]: Pending modes not reflected in UnitDisplay System & Weapons tabs
 + Bug: UnitDisplay System tab would display "()" for equipment in "Normal" mode
 + Bug: Slot list not updated when mode changed in UnitDisplay Systems tab
++ Patches [#405/#406/#407/#408/#409] - Various Source Updates.
++ New Sprites
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
