+ Patch [#489]: HarJel II/III repair systems

--- a/megamek/i18n/megamek/common/report-messages.properties
+++ b/megamek/i18n/megamek/common/report-messages.properties
@@ -1023,6 +1023,10 @@
 #flawed cooling system related
 9800=<newline><data> [<data>] Checking Flawed Cooling due to <data>.  Rolls <data>.
 9805=\ --Adding 5 heat.
+# HarJel II/III related
+9850=<data> (<data>) repairs <data> armor in <data> due to HarJel II system.
+9851=<data> (<data>) repairs <data> armor in <data> due to HarJel III system.
+9852=HarJel repair system is destroyed causing possible critical hits!
 
 #Unofficial Messages
 #Ultra Autocannon firing in unofficial ultra mode
