+ Bug: GameOptionsDialog Defaults had strange behavior: now resets all options to their default values   The previous behavior was to check if the option component had changed, and   if so, reset it to default.  This leads to strange behavior.  Instead, it   should check if the component has a default value, and if not change it to   default, which is what it does now.

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -143,6 +143,8 @@ v0.41.4-dev (SVN)
 + Patch [#489]: HarJel II/III repair systems
 + Bug: VTOLs and large support vehicles could be hit and destroyed by aimed shots
     to imaginary dual turrets (which VTOLs can't even mount, anyway).
++ Bug: GameOptionsDialog Defaults had strange behavior: now resets all options
+    to their default values
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
