+ Bug: Meks carrying mechanized battle armor can't jump. (As just confirmed by Xotl in http://bg.battletech.com/forums/total-warfare/mechanized-battle-armor-on-units-with-unusual-movement-modes, the "no jumping/VTOL/WiGE" rule should only apply to vehicles, not any and all units.)

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -146,6 +146,7 @@ v0.41.4-dev (SVN)
 + Bug: GameOptionsDialog Defaults had strange behavior: now resets all options
     to their default values
 + Bug: GameOptionsDialog Load could fail to update options in certain situations
++ Bug: Meks carrying mechanized battle armor can't jump.
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
